--- a/app/views/helpers/_build_table_filter.html.erb
+++ b/app/views/helpers/_build_table_filter.html.erb
@@ -16,14 +16,18 @@
 
 <%#= javascript_include_tag '/assets/backbone_js/tmpl.min.js' %>
 <script type="text/javascript">
+    ladas_loading_show();
     $(document).ready(function () {
         <% if settings[:template].blank? %>
+        ladas_loading_show();
         var initial_parsed_data = jQuery.parseJSON('<%= j settings.to_json.html_safe %>');
         var html_from_json = TableBuilder.render_tbody(initial_parsed_data);
         TableSummaries.refresh(initial_parsed_data);
 
         $("#<%= settings[:form_id] %>_ajax_content").html(html_from_json);
         apply_modifiers_of_the_table($("#<%= settings[:form_id] %>_ajax_content"));
+
+        ladas_loading_hide();
         <% end %>
         formatLinkForPaginationURL('<%= settings[:form_id] %>');
 
