--- a/app/views/helpers/_build_table_wrapper.html.erb
+++ b/app/views/helpers/_build_table_wrapper.html.erb
@@ -140,6 +140,7 @@
 <script type="text/javascript">
     $('.<%= settings[:form_id] + "_column_find" %>').livesearch({
         searchCallback:function (searchTerm) {
+            FilterChangeMarker.mark_active_filters('<%= settings[:form_id] %>');
             $('#<%= settings[:form_id] %>').submit();
         },
         queryDelay:1000,
