--- a/app/views/helpers/_build_table.html.erb
+++ b/app/views/helpers/_build_table.html.erb
@@ -20,7 +20,7 @@
 
 
         <% if settings[:checkboxes] %>
-    <span>Vybraných řádků: <strong>
+    <span>Vybráno: <strong>
       <span title="Počet označených řádků na všech stránkách" id="<%= settings[:form_id]+ "_active_checkboxes_count" %>">
                                          <%= !settings[:params]["checkbox_pool"].blank? ? settings[:params]["checkbox_pool"].split(",").count : 0 %>
                                        </span>
