--- a/app/views/helpers/editable_table/_build_table.html.erb
+++ b/app/views/helpers/editable_table/_build_table.html.erb
@@ -26,6 +26,12 @@
                                        </span>
     </strong>
     </span>
+            <% unless settings[:per_page].blank? %>
+                      <span class="select_for_per_page" style="float: right">Zobrazit na stránku: <%= select_tag("per_page_chosen", options_for_select(settings[:per_page], settings[:params]['per_page'].to_i),
+                                                                                                                 :onchange => "form_submit_watcher('#{settings[:form_id]}')",
+                                                                                                                 :class => "") %></span>
+            <% end %>
+
         <% end %>
 
         <% if settings[:display_method].blank? %>
@@ -70,7 +76,7 @@
       </div>
     </div>
 <% end %>
-<%= form_tag settings[:filter_path], :html => {:'data-type' => 'html'}, :method => 'POST', :class => 'well dataGrid', :remote => true, :id => settings[:form_id] do |f| %>
+<%= form_tag settings[:filter_path], :html => {:'data-type' => 'html'}, :method => 'POST', :class => 'well dataGrid no_hover editable_table', :remote => true, :id => settings[:form_id] do |f| %>
     <% if settings[:display_method].blank? %>
         <% if content_for?(:table_form) %>
             <%= yield :table_form %>
@@ -81,12 +87,6 @@
       <%= render :partial => "/helpers/editable_table/build_table_filter", :locals => {:settings => settings} %>
 
       <% if settings[:display_method].blank? %>
-          <% unless settings[:per_page].blank? %>
-          <span class="select_for_per_page" style="float: right">Zobrazit na stránku: <%= select_tag("per_page_chosen", options_for_select(settings[:per_page], settings[:params]['per_page'].to_i),
-                                                                                                     :onchange => "form_submit_watcher('#{settings[:form_id]}')",
-                                                                                                     :class => "") %></span>
-          <% end %>
-
 
 
           <div class="<%= settings[:form_id] + '_ajax_pager' %>">
@@ -103,3 +103,25 @@
       <% end %>
     </fieldset>
 <% end %>
+
+
+
+<div id="modal_cell_editing" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <!--<div class="modal-header">-->
+  <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>-->
+  <!--<h3 id="myModalLabel">Modal header</h3>-->
+  <!--</div>-->
+  <!--<div class="modal-body">-->
+  <!--<p>One fine body…</p>-->
+  <!--</div>-->
+  <!--<div class="modal-footer">-->
+  <!--<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>-->
+  <!--<button class="btn btn-primary">Save changes</button>-->
+  <!--</div>-->
+</div>
+<script type="text/javascript">
+    EditableTableModalDialog.init('modal_cell_editing')
+</script>
+
+
+
