helper for timepicker onclick js code in action modal dialog for all

--- a/app/assets/stylesheets/backbone_css/tables.css.scss
+++ b/app/assets/stylesheets/backbone_css/tables.css.scss
@@ -101,3 +101,9 @@ span.previous_page.disabled, span.next_page.disabled {
   width: 100%;
   white-space: nowrap;
 }
+
+
+.dataGrid .table_filter_active {
+    background-color: #5bff23 !important;
+}
+
