--- a/app/views/helpers/editable_table/_build_table.html.erb
+++ b/app/views/helpers/editable_table/_build_table.html.erb
@@ -29,46 +29,8 @@
 
 
         <% end %>
+        <%= render :partial => "/helpers/editable_table/build_table_checkbox_functions", :locals => {:settings => settings} %>
 
-        <% if settings[:display_method].blank? %>
-            <% if settings[:checkboxes] %>
-                <script type="text/javascript">
-                    function submit_in_new_window(form_id) {
-                        var form_original = $("#" + form_id);
-
-                        // create new form by cloning without events
-                        var form = form_original.clone(false)
-
-                        // disabling ajax
-                        form.removeAttr("data-remote");
-
-                        form.attr("target", "_blank");
-                        form.attr("action", form_original.attr("action"));
-                        form.attr("style", "display: none;");
-
-                        // need to append it to browser html, otherwise it wont send in many browsers (with clone it works only with chrome)
-                        form_original.after(form);
-
-                        //Create an input type dynamically.
-                        var element = document.createElement("input");
-
-                        //Assign different attributes to the element.
-                        element.setAttribute("type", "hidden");
-                        element.setAttribute("value", "print_by_checkboxes");
-                        element.setAttribute("name", "___display_method___");
-
-                        //Append the element in form
-                        form.append(element);
-
-                        form.submit();
-                        form.remove();
-                    }
-
-                </script>
-                <a href="#" class="btn" onclick="submit_in_new_window('<%= settings[:form_id] %>'); return false;"><i class="icon-print"></i>&nbsp;
-                  Tisknout výběr</a>
-            <% end %>
-        <% end %>
       </div>
     </div>
 <% end %>
@@ -123,6 +85,9 @@
 <script type="text/javascript">
     EditableTableModalDialog.init('modal_cell_editing')
 </script>
+
+ <%# moved here, document ready removed, it has been called when printed etc, ready is called event when form is send to target _blank  %>
+<%= render :partial => "/helpers/editable_table/build_table_ajax_callback_code", :locals => {:settings => settings} %>
 
 
 
